feat: add vm option